# newter

./: .dockerignore  .gitignore  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LAUNCH_EMAIL_DRAFT.md  LICENSE  NEWT_FOR_LLMS.md  README.md  TASKS.md  docker-compose.yml  fly.toml  out.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
deploy/: README.md
docs/: CLAUDE_CONTEXT.md  COMPILER_GUIDE.md  LANGUAGE_SPEC.md  NEWT_ENHANCEMENTS_FROM_BUILD_YOUR_OWN_X.md  NEWT_IMPROVEMENTS_FROM_REACT_UI_ANALYSIS.md  PROJECT_MAP.md  README.md
docs/website/: SIGN_OFF.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
examples/: counter.newt  dashboard.newt  form.newt  landing.newt
ide/: README.md
ide/vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  newt-language-0.1.0.vsix  package-lock.json  package.json
newter-compiler/: Cargo.toml  README.md
newter-compiler/examples/: counter.newt  english-like.newt  hello.newt  screen-header-container.newt  target-sentence-style.newt.txt  typewriter-screens.newt
newter-compiler/src/: app.rs  ast.rs  error.rs  html.rs  layout.rs  lexer.rs  lib.rs  main.rs  parser.rs  react.rs  serve.rs  value.rs
newter-compiler/src/canvas/: index.html
newter-compiler/src/renderer/: mod.rs  rect.wgsl  state.rs
newter-lsp/: Cargo.toml
newter-lsp/src/: main.rs  server.rs
newter-terminal/: Cargo.toml  README.md
newter-terminal/src/: main.rs  ui.rs
playground/wasm/: Cargo.toml
playground/wasm/src/: lib.rs
playground/web/: app.js  index.html  newt_playground_wasm.js  (+2 more)
video/: package-lock.json  package.json  tsconfig.json
(+54 files in other folders)
